fix(layout): fix layout issues

--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -1,4 +1,5 @@
 @import "../../shared/styles/variables/breakpoints.scss";
+@import "../../shared/styles/background.scss";
 
 .container {
   display: flex;
@@ -6,16 +7,7 @@
   align-items: center;
 }
 
-.background {
-  top: 0;
-  background: #f6fbf2;
-  position: absolute;
-  z-index: -1;
-  width: 110vw;
-  height: 100%;
-  transform: translate(-50%, 0);
-  left: 50%;
-}
+@include gradient-background(#f6fbf2);
 
 .header {
   display: none;
